--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>hola</title>
+        <script src="https://yikuansun.github.io/lightning-experiment/rasterizer.js"></script>
     </head>
     <body>
+        <button onclick="rasterize(svg).then(function(e) { var a = document.createElement('a'); a.href = e; a.download = 'burst.png'; a.click(); })">Export</button>
         <svg viewBox="0 0 1920 1920" style="background-color: black;"></svg>
         <script src="code.js"></script>
     </body>
