--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
                 </filter>
             </defs>
         </svg>
+        <form>
+            <label for="numpts"># of spokes</label>
+            <input id="numpts" type="number" value="42" />
+            <br />
+            <label for="burstSize">Burst size</label>
+            <input id="burstSize" type="number" value="300" />
+            <br />
+            <label for="innerRadius">Inner radius</label>
+            <input id="innerRadius" type="number" value="30" />
+            <br />
+            <label for="blurAmount">Blur</label>
+            <input id="blurAmount" type="number" value="4" />
+        </form>
         <script src="code.js"></script>
     </body>
 </html>
