Render the gradient

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <label for="blurAmount">Blur</label>
             <input id="blurAmount" type="number" value="4" />
         </form>
+        <script src="EllipticalGradient.js"></script>
+        <script src="SpotComponent.js"></script>
         <script src="code.js"></script>
     </body>
 </html>
