Add light rays(!!!)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <input id="blurAmount" type="number" value="4" />
         </form>
         <script src="EllipticalGradient.js"></script>
+        <script src="FractalNoise.js"></script>
         <script src="SpotComponent.js"></script>
         <script src="code.js"></script>
     </body>
