Apply Colorize effect

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </form>
         <script src="EllipticalGradient.js"></script>
         <script src="FractalNoise.js"></script>
+        <script src="colorvibrance.js"></script>
         <script src="SpotComponent.js"></script>
         <script src="code.js"></script>
     </body>
