--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <script src="https://yikuansun.github.io/lightning-experiment/lib/photopea.min.js"></script>
     </head>
     <body>
-        <button onclick="rasterize(svg).then(function(e) { var a = document.createElement('a'); a.href = e; a.download = 'burst.png'; a.click(); })">Export</button>
-        <button id="photopeaButton" style="display: none;" onclick="rasterize(svg).then(function(e) { Photopea.runScript(window.parent, `app.open('${e}', null, true)`); })">Add to document</button>
+        <button onclick="var a = document.createElement('a'); a.href = canvas.toDataURL(); a.download = 'burst.png'; a.click();">Export</button>
+        <button id="photopeaButton" style="display: none;" onclick="Photopea.runScript(window.parent, `app.open('${canvas.toDataURL()}', null, true)`);">Add to document</button>
         <canvas width="1024" height="1024" style="width: 100%;"></canvas>
         <form>
             <label for="intensity">Intensity</label>
