Polar Coordinates filter (almost)
not quite...

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <script src="EllipticalGradient.js"></script>
         <script src="FractalNoise.js"></script>
         <script src="colorvibrance.js"></script>
+        <script src="polarCoordinatesFilter.js"></script>
         <script src="SpotComponent.js"></script>
         <script src="code.js"></script>
     </body>
